# pats

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .gitignore
src/pats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pats/utils/: __init__.py  loaders.py
