[project]
name = "pats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "joblib>=1.5.2",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "tables>=3.10.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "youtube-dl>=2021.12.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
